--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:zpjCuTEfpxdbLBtZkz6SG++SfstfzpnH+LcUWEm5fys=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
