--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:zpjCuTEfpxdbLBtZkz6SG++SfstfzpnH+LcUWEm5fys=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://labptipd.uinsgd.ac.id
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sislab-
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=labptipd_sislab-
+DB_USERNAME=labptipd
+DB_PASSWORD=Robust4L4mpung!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
