Save local changes before pull

--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=labptipd_sislab-
-DB_USERNAME=labptipd
-DB_PASSWORD=Robust4L4mpung!
+DB_DATABASE=sislab-
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
