--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=labptipd_sislab-
-DB_USERNAME=labptipd
-DB_PASSWORD=Robust4L4mpung!
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
